UI bug fix on mobile: navbar overlayed the zoom buttons

--- a/foodmap_app/static/css/styles.css
+++ b/foodmap_app/static/css/styles.css
@@ -16,6 +16,13 @@
     z-index: 1;
 }
 
+@media (max-width: 388px) {
+  #map {
+    margin-top: 87px;
+  }
+}
+
+
 body {
     margin: 0;
     padding-top: 110px;
